Played around with header. Moved location up there, and got it looking somewhat reasonable responsively.

--- a/dum.html
+++ b/dum.html
@@ -18,24 +18,30 @@
 </head>
 <body>
 <div class="container">
-  <div class="row">
-     <div class="col-sm-6 ">
+  <div class="row agenda_header vertical-align"> 
+    <img class="col-xs-2" id="tm-logo" src="images/tm-logo-sm-min.png" alt="Toastmasters Logo"/>
+    <div class="col-sm-7 col-xs-12">
       <h1>Dolby Speakers</h1>
     </div>
-      <div class="col-sm-6 date">
-      <h2>17 April, 2017</h2>
-    </div>   
+    <div class="col-sm-3 col-xs-12">
+      <div class="row">
+        <div class="col-xs-12">
+          <h2 id="date">17 April, 2017</h2>
+        </div>
+        <div class="col-xs-12">
+        </div>
+      </div>
+    </div>
   </div>
   <div class="row"> 
     <!--   Following the principle of most important content first, the main agenda content is described first, followed by the officers' sidebar. But, in presentation terms, the ordering is reversed using the push/pull construct.  -->
     <article class="col-sm-9 main col-sm-push-3">
-      <h2>17<span class="superscript">th</span> April, 2017</h2>
-	<h3>3<span class="superscript">rd</span> Tonal Center</h3>
-	<p>Word of the day: <a href="http://www.dictionary.com/browse/tumultuous">tumultuous</a></p>
-  	<div id="wotd-definition"></div>
+      <h3>3<span class="superscript">rd</span> Tonal Center</h3>
+      <p>Word of the day: <a href="http://www.dictionary.com/browse/tumultuous">tumultuous</a></p>
+      <div id="wotd-definition"></div>
     </article>
     <aside class="col-sm-3 col-sm-pull-9 sidebar">
-<dl>
+      <dl>
         <dt class="officer-role">President</dt>
         <dd class="officer-name"><a href="mailto:awils@dolby.com">Andrew Wilson, CC, ALB</a> </dd>
         <dt class="officer-role">VP Education</dt>
@@ -63,8 +69,7 @@
 <script src="js/jquery-1.11.3.min.js"></script> 
 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
-<script src="js/bootstrap.js"></script>
-
+<script src="js/bootstrap.js"></script> 
 <script src="js/dum.js"></script>
 </body>
 </html>
