Oops, removed the location from the wrong place 😅. Fixed.

--- a/dum.html
+++ b/dum.html
@@ -29,6 +29,7 @@
           <h2 id="date">17 April, 2017</h2>
         </div>
         <div class="col-xs-12">
+          <h3 id="location">3<span class="superscript">rd</span> Tonal Center</h3>
         </div>
       </div>
     </div>
@@ -36,7 +37,6 @@
   <div class="row"> 
     <!--   Following the principle of most important content first, the main agenda content is described first, followed by the officers' sidebar. But, in presentation terms, the ordering is reversed using the push/pull construct.  -->
     <article class="col-sm-9 main col-sm-push-3">
-      <h3>3<span class="superscript">rd</span> Tonal Center</h3>
       <p>Word of the day: <a href="http://www.dictionary.com/browse/tumultuous">tumultuous</a></p>
       <div id="wotd-definition"></div>
     </article>
