WotD link now opens in new tab.

--- a/dum.html
+++ b/dum.html
@@ -37,7 +37,7 @@
   <div class="row"> 
     <!--   Following the principle of most important content first, the main agenda content is described first, followed by the officers' sidebar. But, in presentation terms, the ordering is reversed using the push/pull construct.  -->
     <article class="col-sm-9 main col-sm-push-3">
-      <p>Word of the day: <a href="http://www.dictionary.com/browse/tumultuous">tumultuous</a></p>
+      <p>Word of the day: <a href="http://www.dictionary.com/browse/tumultuous" target="_blank">tumultuous</a></p>
       <div id="wotd-definition"></div>
     </article>
     <aside class="col-sm-3 col-sm-pull-9 sidebar">
