--- a/dum.html
+++ b/dum.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Untitled Document</title>
+<title>Dolby Speakers Agenda 17 Apr 2017</title>
 <!-- Bootstrap -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/ds_agenda.css" rel="stylesheet" type="text/css">
@@ -70,6 +70,6 @@
 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/bootstrap.js"></script> 
-<script src="js/dum.js"></script>
+<!--<script src="js/dum.js"></script>-->
 </body>
 </html>
