Added the wotd definition.

--- a/agenda.html
+++ b/agenda.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Dolby Speakers Agenda 17 Apr 2017</title>
 <!-- Bootstrap -->
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/ds_agenda.css" rel="stylesheet" type="text/css">
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+<link href="css/agenda.css" rel="stylesheet" type="text/css">
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -38,7 +38,15 @@
     <!--   Following the principle of most important content first, the main agenda content is described first, followed by the officers' sidebar. But, in presentation terms, the ordering is reversed using the push/pull construct.  -->
     <article class="col-sm-9 main col-sm-push-3">
       <p>Word of the day: <a href="http://www.dictionary.com/browse/tumultuous" target="_blank">tumultuous</a></p>
-      <div id="wotd-definition"></div>
+      <div id="wotd-definition">
+        <!-- This could eventually be replaced by a definition pulled from the internet -->
+        <h4>[too-muhl-choo-uh s, tyoo-]</h4>
+        <ol>
+          <li>adj. full of tumult or riotousness; marked by disturbance and uproar</li>
+          <li>adj. raising a great clatter and commotion; disorderly or noisy</li>
+          <li>adj. highly agitated, as the mind or emotions; distraught; turbulent</li>
+        </ol>
+      </div>
     </article>
     <aside class="col-sm-3 col-sm-pull-9 sidebar">
       <dl>
@@ -66,10 +74,9 @@
   </div>
 </div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="js/jquery-1.11.3.min.js"></script> 
+<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script> 
 
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
-<script src="js/bootstrap.js"></script> 
-<!--<script src="js/dum.js"></script>-->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
 </body>
 </html>
