--- a/agenda.html
+++ b/agenda.html
@@ -37,14 +37,14 @@
   <div class="row"> 
     <!--   Following the principle of most important content first, the main agenda content is described first, followed by the officers' sidebar. But, in presentation terms, the ordering is reversed using the push/pull construct.  -->
     <article class="col-sm-9 main col-sm-push-3">
-      <p>Word of the day: <a href="http://www.dictionary.com/browse/tumultuous" target="_blank">tumultuous</a></p>
+      <h4>Word of the day: <a href="http://www.dictionary.com/browse/tumultuous" target="_blank">tumultuous</a></h4>
       <div id="wotd-definition">
         <!-- This could eventually be replaced by a definition pulled from the internet -->
-        <h4>[too-muhl-choo-uh s, tyoo-]</h4>
+        <h5>[too-MUHL-choo-uh s, tyoo-]</h5>
         <ol>
-          <li>adj. full of tumult or riotousness; marked by disturbance and uproar</li>
-          <li>adj. raising a great clatter and commotion; disorderly or noisy</li>
-          <li>adj. highly agitated, as the mind or emotions; distraught; turbulent</li>
+          <li><i>adj.</i> full of tumult or riotousness; marked by disturbance and uproar</li>
+          <li><i>adj.</i> raising a great clatter and commotion; disorderly or noisy</li>
+          <li><i>adj.</i> highly agitated, as the mind or emotions; distraught; turbulent</li>
         </ol>
       </div>
     </article>
