Added mailtos for all the roles.

--- a/agenda.html
+++ b/agenda.html
@@ -50,28 +50,28 @@
       <section id="programme" class="row">
         <div class="col-xs-8 agenda-item">Attendee Arrivals</div><div class="col-xs-4 agenda-time">12:00 – 12:05 pm</div>
         <div class="col-xs-8 agenda-item">Welcome</div><div class="col-xs-4 agenda-time">12:05 pm</div>
-        <div class="col-xs-8 agenda-role">Sargeant-at-Arms</div><div class="col-xs-4 agenda-name">Ray Meluch</div>
+        <div class="col-xs-8 agenda-role">Sargeant-at-Arms</div><div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Ray Meluch</a></div>
         <div class="col-xs-8 agenda-item">Role Introductions</div><div class="col-xs-4 agenda-time">12:06 – 12:10 pm</div>
-        <div class="col-xs-8 agenda-role">Toastmaster</div><div class="col-xs-4 agenda-name">Josh Lando</div>
-        <div class="col-xs-8 agenda-role">Timer</div><div class="col-xs-4 agenda-name">Gary Halpin</div>
-        <div class="col-xs-8 agenda-role">Ah-counter</div><div class="col-xs-4 agenda-name">Annie Yoshiyama</div>
-        <div class="col-xs-8 agenda-role">General Evaluator</div><div class="col-xs-4 agenda-name">Candace Flemmer</div>
+        <div class="col-xs-8 agenda-role">Toastmaster</div><div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Josh Lando</a></div>
+        <div class="col-xs-8 agenda-role">Timer</div><div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Gary Halpin</a></div>
+        <div class="col-xs-8 agenda-role">Ah-counter</div><div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Annie Yoshiyama</a></div>
+        <div class="col-xs-8 agenda-role">General Evaluator</div><div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Candace Flemmer</a></div>
         <div class="col-xs-8 agenda-item">Prepared Speeches</div><div class="col-xs-4 agenda-time">12:11 – 12:30 pm</div>
-        <div class="col-xs-8 agenda-speech-title">'4th Wave VR, it's about to get real'</div><div class="col-xs-4 agenda-name">John Gilbert</div>
+        <div class="col-xs-8 agenda-speech-title">'4th Wave VR, it's about to get real'</div><div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">John Gilbert</a></div>
         <div class="col-xs-8 agenda-speech-project">CC 10: Inspire Your Audience, 8 – 10 mins</div>
-        <div class="col-xs-8 agenda-speech-title">'Bore da'</div><div class="col-xs-4 agenda-name">Marcus Altman</div>
+        <div class="col-xs-8 agenda-speech-title">'Bore da'</div><div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Marcus Altman</a></div>
         <div class="col-xs-8 agenda-speech-project">CC 1: The Ice Breaker, 4 – 6 mins</div>
         <div class="col-xs-8 agenda-item">Table Topics</div><div class="col-xs-4 agenda-time">12:30 – 12:42 pm</div>
-        <div class="col-xs-8 agenda-speech-title">'Days of Future Passed'</div><div class="col-xs-4 agenda-name">Ray Meluch</div>
+        <div class="col-xs-8 agenda-speech-title">'Days of Future Passed'</div><div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Ray Meluch</a></div>
         <div class="col-xs-8 agenda-item">Responses, 1 – 2 mins</div><div class="col-xs-4 agenda-name">Members</div>
         <div class="col-xs-8 agenda-item">Evaluations</div><div class="col-xs-4 agenda-time">12:42 – 12:55 pm</div>
-        <div class="col-xs-8 agenda-role">Speech 1 Evaluation, 2 – 3 mins</div><div class="col-xs-4 agenda-name">Andrew Wilson</div>
-        <div class="col-xs-8 agenda-role">Speech 2 Evaluation, 2 – 3 mins</div><div class="col-xs-4 agenda-name">Mike Assenti</div>
-        <div class="col-xs-8 agenda-role">Timer's Report, 1 – 2 mins</div><div class="col-xs-4 agenda-name">Gary Halpin</div>
-        <div class="col-xs-8 agenda-role">Ah-counter Report, 1 – 2 mins</div><div class="col-xs-4 agenda-name">Annie Yoshiyama</div>
-        <div class="col-xs-8 agenda-role">General Evaluation, 1 – 2 mins</div><div class="col-xs-4 agenda-name">Candace Flemmer</div>
+        <div class="col-xs-8 agenda-role">Speech 1 Evaluation, 2 – 3 mins</div><div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Andrew Wilson</a></div>
+        <div class="col-xs-8 agenda-role">Speech 2 Evaluation, 2 – 3 mins</div><div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Mike Assenti</a></div>
+        <div class="col-xs-8 agenda-role">Timer's Report, 1 – 2 mins</div><div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Gary Halpin</a></div>
+        <div class="col-xs-8 agenda-role">Ah-counter Report, 1 – 2 mins</div><div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Annie Yoshiyama</a></div>
+        <div class="col-xs-8 agenda-role">General Evaluation, 1 – 2 mins</div><div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Candace Flemmer</a></div>
         <div class="col-xs-8 agenda-item">Club Business</div><div class="col-xs-4 agenda-time">12:55 – 1:00 pm</div>
-        <div class="col-xs-8 agenda-role">President</div><div class="col-xs-4 agenda-name">Andrew Wilson</div>
+        <div class="col-xs-8 agenda-role">President</div><div class="col-xs-4 agenda-name"><a href="mailto:fummy@test.com">Andrew Wilson</a></div>
         <div class="col-xs-8 agenda-item">Meeting Adjourns</div><div class="col-xs-4 agenda-time">1:00 pm</div>
         
       </section>
@@ -95,6 +95,7 @@
         <dt class="officer-role">Immediate Past President</dt>
         <dd class="officer-name"><a href="mailto:cseli@test.com">Chris Seline, CC</a> </dd>
       </dl>
+      <!-- TODO add the other club details to the sidebar -->
     </aside>
   </div>
   <div class="row">
